ARM32 build failures after JDK-7041262 (VM_Version should be called instead of Abstract_VM_Version so that overriding works)

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 12
    • Affects Version/s: None
    • Component/s: hotspot
    • None
    • b17

      arm32:

      * For target hotspot_variant-server_libjvm_objs_BUILD_LIBJVM_link:
      /pool/buildbot/slaves/sobornost/jdkX/build/build/linux-arm-server-release/hotspot/variant-server/libjvm/objs/arguments.o: In function `Arguments::init_system_properties()':
      /pool/buildbot/slaves/sobornost/jdkX/build/src/hotspot/share/runtime/arguments.cpp:402: undefined reference to `VM_Version::vm_info_string()'
      /pool/buildbot/slaves/sobornost/jdkX/build/build/linux-arm-server-release/hotspot/variant-server/libjvm/objs/arguments.o: In function `Arguments::set_mode_flags(Arguments::Mode)':
      /pool/buildbot/slaves/sobornost/jdkX/build/src/hotspot/share/runtime/arguments.cpp:1519: undefined reference to `VM_Version::vm_info_string()'
      /pool/buildbot/slaves/sobornost/jdkX/build/build/linux-arm-server-release/hotspot/variant-server/libjvm/objs/thread.o: In function `Threads::print_on(outputStream*, bool, bool, bool, bool)':
      /pool/buildbot/slaves/sobornost/jdkX/build/src/hotspot/share/runtime/thread.cpp:4571: undefined reference to `VM_Version::vm_info_string()'
      /pool/buildbot/slaves/sobornost/jdkX/build/build/linux-arm-server-release/hotspot/variant-server/libjvm/objs/thread.o: In function `Threads::create_vm(JavaVMInitArgs*, bool*)':
      /pool/buildbot/slaves/sobornost/jdkX/build/src/hotspot/share/runtime/thread.cpp:3783: undefined reference to `VM_Version::vm_info_string()'
      /pool/buildbot/slaves/sobornost/jdkX/build/build/linux-arm-server-release/hotspot/variant-server/libjvm/objs/vmError.o: In function `report_vm_version(outputStream*, char*, int) [clone .constprop.81]':
      /pool/buildbot/slaves/sobornost/jdkX/build/src/hotspot/share/utilities/vmError.cpp:329: undefined reference to `VM_Version::vm_info_string()'
      collect2: error: ld returned 1 exit status

            Assignee:
            Aleksey Shipilev
            Reporter:
            Aleksey Shipilev
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: